# memex-ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
prompts/: system_prompt.txt
src/memex_ai/: agent.py  config.py
src/memex_ai/tools/: memory.py  meta_tools.py  web_scraper.py
