[project]
name = "memex-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "zhuwj",email = "byzhubaiyuan@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "openai (>=1.93.0,<2.0.0)",
    "langgraph (>=0.5.0,<0.6.0)",
    "langmem (>=0.0.27,<0.0.28)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]
packages = [{include = "memex_ai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
