[tool.poetry]
name = "memex-ai"
version = "0.1.0"
description = "A personalized AI research assistant with long-term memory."
authors = ["zhuwj <byzhubaiyuan@gmail.com>"]
readme = "README.md"
packages = [{include = "memex_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.9.0"
langgraph = "^0.5.0"
langmem = "^0.0.27"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
tiktoken = "^0.7.0"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.41"
orjson = "^3.10.18"
rich = "^14.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration starts here
[tool.ruff]
# Set the minimum Python version to target.
target-version = "py312"
# Define the source code directory (CORRECT LOCATION)
src = ["src"]

[tool.ruff.lint]
# Select a base set of rules to check for.
# E = pycodestyle errors
# F = pyflakes (for things like unused imports)
select = ["E", "F"]
